[package]
name = "sum-storage-runtime-api"
version = "4.0.0-dev"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}

[dev-dependencies]
serde_json = "1.0.74"

[features]
default = ["std"]
std = [
	"sp-api/std",
]
