[package]
name = "cp-inherent"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for inherent consensus"
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# substrate primitive package
sp-api = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-std = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-runtime = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-inherents = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
thiserror = { version = "1.0.30", optional = true }
log = { version = "0.4.8", optional = true }
futures-timer = { version = "3.0.2", optional = true }
async-trait = { version = "0.1.50", optional = true }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-std/std",
    "sp-runtime/std",
    "codec/std",
    "sp-inherents/std",
    "thiserror",
    "log",
    "futures-timer",
    "async-trait",
]
