[package]
name = "trex-inherent"
version = "0.10.0-dev"
authors = ["NexToken Technologies - Trex Dev Team <team@trex.ink>"]
homepage = "https://trex.ink"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NexTokenTech/Trex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# substrate primitive package
sp-api = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-std = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-runtime = { version = "6.0.0", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-inherents = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
thiserror = { version = "1.0.30", optional = true }
log = { version = "0.4.8", optional = true }
futures-timer = { version = "3.0.2", optional = true }
async-trait = { version = "0.1.50", optional = true }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-std/std",
    "sp-runtime/std",
    "codec/std",
    "sp-inherents/std",
    "thiserror",
    "log",
    "futures-timer",
    "async-trait",
]
