[package]
name = "pallet-storage-runtime-api"
version = "4.0.0-dev"
authors = ["NexToken Technologies - Trex Dev Team <team@trex.ink>"]
homepage = "https://trex.ink"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NexTokenTech/Trex"

[dependencies]
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24"}
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
]}

[dev-dependencies]
serde_json = "1.0.74"

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-runtime/std",
	"codec/std"
]